--- a/instituicao/turmas/vizualizacao_grupo/index.html
+++ b/instituicao/turmas/vizualizacao_grupo/index.html
@@ -23,52 +23,175 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt nisl velit, in dapibus lectus tristique vitae. Ut ut ullamcorper tortor. Nullam sed velit diam. Suspendisse vehicula lacinia fermentum. Sed non ultricies lacus.</p>
         </div>
 
-        <div class="integrantes">
+        <div class="cont-integrantes">
             <h1>Integrantes do grupo:</h1>
             <ul class="list-group ul-integrantes">
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="90" data-height="90"></span>
-
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="90" data-height="90"></span>
-
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="90" data-height="90"></span>
-
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    </div>
+                    <p>NOME</p>
+                </li>
+                <li class="list-group-item li-integrantes">
+                    <div class="integrantes">
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                     </div>
                     <p>NOME</p>
                 </li>
             </ul>
         </div>
 
-        <div class="orientadores">
+        <div class="cont-orientadores">
             <h1>Orientadores do grupo:</h1>
             <ul class=" list-group ul-orientadores">
                 <li class="list-group-item li-orientadores">
                     <div class="orientadores">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="90" data-height="90"></span>
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-orientadores">
                     <div class="orientadores">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="90" data-height="90"></span>
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
 
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-orientadores">
                     <div class="orientadores">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="90" data-height="90"></span>
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
 
                     </div>
                     <p>NOME</p>
