side menu finalizado

--- a/instituicao/componentes/side_menu_video/side_menu.html
+++ b/instituicao/componentes/side_menu_video/side_menu.html
@@ -46,9 +46,11 @@
                 <span class="tooltip">Avaliações</span>
             </li>
             <li class="profile">
-                <div class="profile-details">
+                <a href="#">
                     <i class='bx bx-log-out' id="log_out"></i>
                     <span class="links_name">Log Out</span>
+                </a>
+                <span class="tooltip">Log Out</span>
             </li>
         </ul>
 
@@ -57,24 +59,17 @@
     <script>
         let sidebar = document.querySelector(".sidebar");
         let closeBtn = document.querySelector("#btn");
-        let searchBtn = document.querySelector(".bx-search");
 
         closeBtn.addEventListener("click", () => {
             sidebar.classList.toggle("open");
-            menuBtnChange(); //calling the function(optional)
+            menuBtnChange();
         });
 
-        searchBtn.addEventListener("click", () => { // Sidebar open when you click on the search iocn
-            sidebar.classList.toggle("open");
-            menuBtnChange(); //calling the function(optional)
-        });
-
-        // following are the code to change sidebar button(optional)
         function menuBtnChange() {
             if (sidebar.classList.contains("open")) {
-                closeBtn.classList.replace("bx-menu", "bx-menu-alt-right"); //replacing the iocns class
+                closeBtn.classList.replace("bx-menu", "bx-menu-alt-right");
             } else {
-                closeBtn.classList.replace("bx-menu-alt-right", "bx-menu"); //replacing the iocns class
+                closeBtn.classList.replace("bx-menu-alt-right", "bx-menu");
             }
         }
     </script>
