telas de edição e visualização do perfil de professor feitas

--- a/instituicao/perfil/editar/index.html
+++ b/instituicao/perfil/editar/index.html
@@ -27,13 +27,13 @@
   <link rel="stylesheet" href="../../componentes/header/styles_header.css">
   <script defer src="./script.js"></script>
 
-  <title>EDIÇÃO DE PERFIL</title>
+  <title>Editar Perfil</title>
 </head>
 
 <body>
 
   <div class="container mt-5 container">
-    <h1>EDITAR PERFIL DA INSTITUIÇÃO</h1>
+    <h1>EDITAR PERFIL</h1>
     <form onsubmit="editarInstituicao()" class="row g-3">
       <div class="col-md-12" id="icon">
         <label for="email_institucional" class="form-label">E-mail institucional</label>
