--- a/professor/perfil/editar/index.html
+++ b/professor/perfil/editar/index.html
@@ -34,7 +34,7 @@
 
     <div class="container mt-5 container">
         <h1>EDITAR PERFIL</h1>
-        <form onsubmit="editarProfessor()" class="row g-3">
+        <form class="row g-3">
             <div class="col-md-12" id="icon">
                 <label for="email_professor" class="form-label">E-mail:</label>
                 <input id="input_email_professor" type="email" class="form-control email_professor"
