--- a/professor/perfil/index.html
+++ b/professor/perfil/index.html
@@ -25,6 +25,10 @@
     <h1>PERFIL DE USUÁRIO</h1>
     <form class="row g-3">
 
+      <div class="profile-pic-div">
+        <img class="profile-image" src="img/perfil.jpeg" alt="foto de perfil">
+      </div>
+
       <div class="col-md-12">
         <label for="email_professor" class="form-label">E-mail:</label>
         <input id="input_email_professor" type="email" class="form-control email_professor"
