--- a/instituicao/usuarios/cadastro/index.html
+++ b/instituicao/usuarios/cadastro/index.html
@@ -4,12 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
@@ -45,8 +42,7 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
-                        data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
@@ -60,8 +56,7 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
-                        data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
@@ -75,8 +70,7 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
-                        data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
@@ -90,8 +84,7 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
-                        data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
@@ -105,8 +98,7 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
-                        data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
@@ -120,8 +112,7 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
-                        data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
@@ -135,8 +126,7 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
-                        data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
@@ -150,8 +140,7 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
-                        data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
@@ -186,14 +175,19 @@
                 <label for="tipo-select" class="form-label">Tipo</label>
                 <select class="form-select tipo-select" id="select-tipo" aria-label="Default select example">
                     <option selected>SELECIONE O TIPO DE USUÁRIO</option>
-                    <option value="1">Professor</option>
-                    <option value="2">Aluno</option>
-                    <option value="3">Avaliador</option>
+                    <option id="option3" value="1">Professor</option>
+                    <option id="option3" value="2">Aluno</option>
+                    <option id="option3" value="3">Avaliador</option>
                 </select>
             </div>
 
-            <div class="col-md-6 lab-inp" id="turma">
+            <div class="col-md-6 lab-inp turma" id="turma">
                 <label for="turma" class="form-label">Turma</label>
+                <input type="text" class="form-control turma">
+            </div>
+
+            <div class="col-md-6 lab-inp grupo" id="grupo">
+                <label for="turma" class="form-label">Grupo</label>
                 <input type="text" class="form-control turma">
             </div>
 
@@ -220,8 +214,7 @@
 
             <div class="col-md-6 lab-inp">
                 <label for="numero-estudantes" class="form-label">Número de estudantes</label>
-                <input type="email" class="form-control numero-estudantes" placeholder="Universidade De Curitiba "
-                    disabled>
+                <input type="email" class="form-control numero-estudantes" placeholder="Universidade De Curitiba " disabled>
             </div>
 
             <div class="col-md-6 lab-inp">
@@ -262,8 +255,7 @@
                 <ul class="list-group ul-professor">
                     <li class="list-group-item li">
                         <div class="membro">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                                data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                             <div class="nome">
                                 <p>NOME</p>
                             </div>
@@ -277,8 +269,7 @@
 
                     <li class="list-group-item li">
                         <div class="membro">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                                data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                             <div class="nome">
                                 <p>NOME</p>
                             </div>
@@ -292,8 +283,7 @@
 
                     <li class="list-group-item li">
                         <div class="membro">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                                data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                             <div class="nome">
                                 <p>NOME</p>
                             </div>
@@ -307,8 +297,7 @@
 
                     <li class="list-group-itemli">
                         <div class="membro">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                                data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                             <div class="nome">
                                 <p>NOME</p>
                             </div>
@@ -327,8 +316,7 @@
                             <div class="nome">
                                 <p>NOME</p>
                             </div>
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                                data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                             <p class="grupo">GRUPO</p>
                         </div>
                         <div class="button">
@@ -343,8 +331,7 @@
                             <div class="nome">
                                 <p>NOME</p>
                             </div>
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                                data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                             <p class="grupo">GRUPO</p>
                         </div>
                         <div class="button">
@@ -359,8 +346,7 @@
                             <div class="nome">
                                 <p>NOME</p>
                             </div>
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                                data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                             <p class="grupo">GRUPO</p>
                         </div>
                         <div class="button">
@@ -375,8 +361,7 @@
                             <div class="nome">
                                 <p>NOME</p>
                             </div>
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                                data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                             <p class="grupo">GRUPO</p>
                         </div>
                         <div class="button">
